# oh-my-lan

./: .editorconfig  .gitignore  DESIGN.md  Makefile  PRODUCT.md  README.md  go.mod  go.sum
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.impeccable/: design.json
.impeccable/critique/: 2026-05-21T06-33-00Z__internal-server-web-index-html.md
cmd/omlctl/: console_other.go  console_windows.go  kill_unix.go  kill_windows.go  main.go
cmd/omlserver/: main.go
configs/: client.example.yaml  server.example.yaml
docs/: architecture.md  extensions-eval.md  security-via-ssh-tunnel.md
docs/branding/: README.md
internal/auth/: password.go  password_test.go  secret.go  secret_test.go
internal/client/: api.go  daemon.go  daemon_test.go  sshkey.go  state.go  state_test.go
internal/config/: client.go  client_test.go  log.go  server.go  server_test.go
internal/enroll/: enroll.go  enroll_test.go
internal/logging/: buffer.go  buffer_handler.go  buffer_test.go  slog.go  slog_test.go
internal/proto/: dto.go
internal/server/: admin_errors_test.go  audit.go  auth.go  bark.go  bark_handlers_test.go  bark_push_test.go  discover_test.go  handler_admin.go  handler_auth.go  handler_device.go  helpers.go  helpers_test.go  keyseed.go  keyseed_test.go  lifecycle.go  lifecycle_test.go  logs_handler_test.go  (+6 more)
scripts/: critique-trend.sh
tauri/: README.md
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: autostart.rs  daemon.rs  lib.rs  main.rs  winhide.rs
(+72 files in other folders)
